bin/sh/input.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: input.c,v 1.60 2017/07/05 19:54:21 kre Exp $	*/
+/*	$NetBSD: input.c,v 1.61 2017/08/05 11:33:05 kre Exp $	*/
 
 /*-
  * Copyright (c) 1991, 1993
@@ -37,7 +37,7 @@
 #if 0
 static char sccsid[] = "@(#)input.c	8.3 (Berkeley) 6/9/95";
 #else
-__RCSID("$NetBSD: input.c,v 1.60 2017/07/05 19:54:21 kre Exp $");
+__RCSID("$NetBSD: input.c,v 1.61 2017/08/05 11:33:05 kre Exp $");
 #endif
 #endif /* not lint */
 
@@ -310,10 +310,11 @@ preadbuffer(void)
 	*q = '\0';
 
 #ifndef SMALL
-	if (parsefile->fd == 0 && hist && something) {
+	if (parsefile->fd == 0 && hist && (something || whichprompt == 2)) {
 		HistEvent he;
+
 		INTOFF;
-		history(hist, &he, whichprompt == 1? H_ENTER : H_APPEND,
+		history(hist, &he, whichprompt != 2 ? H_ENTER : H_APPEND,
 		    parsenextc);
 		INTON;
 	}
